@@ -59,6 +59,7 @@ DayOfTheWeek, Month DD, YYYY / The Tcpdump Group
       Fix packet filtering with low snaplen.
       Improve connection status reporting.
       Add support for promiscuous mode.
+      Detect DLTs and loopback capture support at run time.
     Windows:
       Fix internal handling of "not supported" error codes from NPF.
       Work around a bug in Npcap 1.00 in case of driver version mismatch.
